# nccl-comm-profiler

./: CMakeLists.txt  LICENSE  README.md  SETUP_LAMBDA.md  SETUP_VAST.md
profiler/: parse_nccl_logs.py  plot_bandwidth.py
results/2 X H100 NVL/: nccl_bench.csv  nccl_bench.parsed.csv  ring_allreduce.csv  topology.json
results/2 x A10/: nccl_bench.csv  ring_allreduce.csv
scripts/: run_bench.sh
src/: nccl_bench.cu  ring_allreduce.cu
